--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <i class="fa-solid fa-house"></i>
+    <h1>Hello, World!</h1>
     <!-- Script -->
     <script src="script.js"></script>
 </body>
